apps/nginx-test/deployments/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    shared-gateway-access: "true"
