apps/nginx-test/deployments/k8s/base/04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
  hostnames:
    - test.eser.land
  rules:
  - backendRefs:
      - name: nginx
        port: 8080
